--- a/styles.css
+++ b/styles.css
@@ -3,15 +3,32 @@
   padding: 0;
   box-sizing: border-box;
 }
+header {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  height: 40px;
+  background: linear-gradient(to bottom, rgba(247, 0, 255, 0.3), rgba(0, 153, 255, 0.3));
+  color: #fff;
+  padding: 10px 0;
+  text-align: center;
+  z-index: 1000; /* Set a high z-index to ensure it appears above other elements */
+}
 
-body {
+nav h1 {
+  margin: 0;
+  font-size: 20px; /* Adjust the font size as needed */
+}
+
+/* main {
+  margin-top: 40px;
   height: 100vh;
   width: 100%;
   display: grid;
   place-items: center;
   overflow: hidden;
   box-shadow: "0px 4px 4px 0px #00000040,inset 0 0 0 1000px rgba(0,0,0,.5)"
-}
+} */
 
 .splashScreen {
   position: fixed;
@@ -32,9 +49,11 @@ body {
 @keyframes fadeOut {
   0% {
     opacity: 1;
-    z-index: 1000;
+    z-index: 100;
   }
-
+  50% {
+    z-index: 10;
+  }
   100% {
     z-index: -1;
   }
@@ -45,10 +64,12 @@ body {
 }
 
 
+
+
 main {
   position: relative;
   width: 100%;
-  height: 100%;
+  height: 100vh;
   box-shadow: 0 3px 10px rgba(0, 0, 0, 0.3);
   z-index: 1;
 }
@@ -163,7 +184,7 @@ main {
   & .btn {
     background: rgba(0, 0, 0, 0.1);
     color: rgba(0, 0, 0, 0.7);
-    border: 2px solid rgba(0, 0, 0, 0.6);
+    border: 2px solid rgba(0, 0, 0, 0.75);
     margin: 0 0.25rem;
     padding: 0.75rem;
     border-radius: 50%;
@@ -187,15 +208,16 @@ audio {
   height: 40px;
   font-weight: 500;
   background-color: rgba(60, 60, 60, 0.761);
-  color: white;
-  border: none;
+  border: 2px solid rgba(0, 0, 0, 0.75);
+  margin-top: 10px;
+  color: rgb(0, 0, 0);
   cursor: pointer;
   font-size: 16px;
-  border-radius: 7px;
+  font-weight: bold;
+  border-radius: 50%;
   transition: background 0.3s ease;
 
   &:hover {
     background-color: rgba(255, 255, 255, 0.3);
   }
 }
-
